css/style.css
/********** BODY**********/

body{
    background-image: url('../img/bg-tablet-pattern.svg'), url('../img/bg-tablet-pattern.svg') ;
    background-position: 100% -12%, -50% 70%;
    background-size: 50%;
    background-repeat: no-repeat, no-repeat;
    font-family: 'Be Vietnam Pro', sans-serif;
    margin: 0px;
}

/********** HEADER **********/

header{
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 30px 50px;
    margin-bottom: 30px;
}

#menuIcon{
    display: none;
}

nav ul{
    display: flex;
    list-style: none;
    color: rgb(35, 44, 81);
}

ul li, a{
    margin: 10px;
    text-decoration: none;
}

ul a:visited{
    color: rgb(35, 44, 81);
}

ul a:hover{
    color: rgba(242, 95, 58, 0.75)
}

button{
    background-color: rgb(242, 95, 58);
    color: white;
    border-radius: 50px;
    font-size: 16px;
    border: none;
    padding: 10px 30px;
}

button:hover{
    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
    background-color: rgb(249,175,157);
    cursor: pointer; 
}

/*********** SECTION: INTRO **********/

#sectionIntro{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 100px;
    margin-bottom: 30px;
}

h1{
    font-size: 52px;
    margin-bottom: 20px;
    color: rgb(35, 44, 81);
}

p{
    font-size: 16px;
    margin-bottom: 30px;
    color: rgb(35, 44, 81);
}

/********** SECTION: FEATURE **********/

#sectionFeatures{
    display: flex;
    padding: 10px 100px;
    color: rgb(35, 44, 81);
}

h2{
    font-size: 42px;
    color: rgb(35, 44, 81);
}

.feature{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.featureContent{
    margin-left: 20px;
}

#sectionFeatures h3{
    margin: 5px 0px;
    color: rgb(35, 44, 81);
}

.feature::before{
    background-color: rgb(242, 95, 58);
    border-radius: 30px;
    padding: 5px 20px;
    color: white;
    margin: 10px 30px;
}

#featureOne::before{
    content: "01";
    margin: 0%;
}

#featureTwo::before{
    content: "02";
    margin: 0%;
}

#featureThree::before{
    content: "03";
    margin: 0%;
}

/********* SCETION: COMMENTS - CARDS **********/

#sectionComments{
    text-align: center;
    padding: 10px 100px;
}

#cards{
    display: flex;
    justify-content: space-around;
}

.card{
    width: 30%;
    background-color: rgb(249, 249, 249);
    position: relative;
    padding: 5px;
    margin-top: 100px;
    margin-bottom: 50px;
    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
}

.card p{
    padding: 5px;
}

.card img{
    position: absolute;
    top: -70%;
    left: 30%;
    margin-top: 100px;
}

.card h3{
    margin-top: 85px;
    color: rgb(35, 44, 81);
}

#sectionComments i{
    display: none;
}

/***** SECTION: BANNER ******/

#sectionBanner{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-image: url('../img/bg-simplify-section-desktop.svg');
    background-color: rgb(242, 95, 58);
    margin-top: 30px;
    padding: 10px 100px;
}

#sectionBanner h2{
    color: white;
}

#sectionBanner button{
    background-color: white;
    color: rgb(242, 95, 58);
    border-radius: 50px;
    font-size: 16px;
    border: none;
    padding: 10px 30px;
}

#sectionBanner button:hover{
    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
    background-color: rgb(249,175,157);
    color: white;
    cursor: pointer;
}

/***** FOOTER *****/

footer{
    background-color: rgb(30, 30, 38);
    display: flex;
    justify-content: space-around;
    padding: 40px 100px;
    color: white;
}

footer img{
    width: auto;
}

#socialNetworks{
    display: flex;
    list-style: none;
    align-items: center;
    font-size: 28px;
}

.contact1, .contact2{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#links1, #links2{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

footer a:visited{
    color: white;
}

footer a:hover{
    color: rgb(242, 95, 58);
}

form{
    display: flex;
    align-items: flex-start;
}

#email, #submitButton{
    margin-right: 10px;
    border-radius: 30px;
    border-style: none;
    padding: 5px 15px;
}

#submitButton:hover{
    background-color: rgb(249,175,157);
    color: white;
    cursor: pointer;

}

#email:focus{
    outline: none;
}

#email:invalid{
    border-color: red;
    margin-bottom: 10px;
}

#email:invalid + span::after{
    content: "Please insert a valid email";
    color: red;
}

#addEmail{
    display: flex;
    flex-direction: column;
}

.feedback{
    margin: 5px;
}


/********************************* MEDIA QUERY *****************************/
@media (max-width:480px) {

    body{
        background-position: 200% -5%, -200% 65%;
        background-size: 80%;
    }

    /***** Header *****/
    header{
        padding: 20px 10px;
        margin: 0px;
        justify-content: space-around;
    }

    header nav{
        display: none;
    }

    #menuIcon{
        display:inline-flex;
        color: rgb(35, 44, 81);
        font-size: 24px;
    }

    header button{
        display: none;
    }

    /****** Section: intro ******/
    #sectionIntro{
        flex-direction: column-reverse;
        padding: 10px 25px;
        margin: 0px;
        text-align: center;
        
    }
    
    h1{
        font-size: 36px;
        color: rgb(35, 44, 81);
    }

    #sectionIntro img{
        width: 90%;

    }

    /***** Section: Feature *****/

    #sectionFeatures{
        flex-direction: column;
        padding: 0px 25px;
    }

    #mainFeature p{
        text-align: center;
        padding: 0px 25px;
    }

    h2{
        font-size: 24px;
        text-align: center;
    }

    #sectionFeatures h3{
        font-size: 14px;
        background-color: rgba(242, 95, 58, 0.2) ;
        padding: 5px 25px;
        text-align: center;
        margin: 0px;
        position: relative;
        left: -20px;
        text-align: left;
        width: 100%;
    }

    .featureContent{
        margin-left: 0px;
    }

    /****** Section: Comments *****/

    #sectionComments{
        padding: 10px 25px;
    }

    .card{
        width: 85%;
        margin-bottom: 10px;
    }

    .hideCard{
        display: none;
    }
    
    .card img{
        left: 25%;
        top: -65%;
    }

    #sectionComments i{
        display: block;
        color: rgb(242, 95, 58);
        font-size: 42px;
        margin: 20px;
    }

    /****** Section: Banner ******/

    #sectionBanner{
        flex-direction: column;
        padding: 20px 25px;
        background-image: url('../img/bg-simplify-section-mobile.svg');
        background-repeat: no-repeat;
    }

    /***** Footer *****/

    footer{
        padding: 20px 25px;
        flex-wrap: wrap;
        justify-content: center;
        position: relative;
    }

    #links2{
        display: flex;
        flex-direction: column;
        margin: 10px 10px;
    }

    #links1{
        display: flex;
        flex-direction: column;
        margin: 10px 10px;
    }

    .contact1{
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        order: -2;
        margin-bottom: 20px;
        width: 90%;
    }

    .contact1 img{
        width: 70%;
        margin: 20px;
    }

    .contact2{
        display: flex;
        align-items: center;
        order: 4;
        margin: 0px 30px;
    }

    #copyright{
        position: absolute;
        bottom: 0px;
        margin: 20px;
    }

    #socialNetworks{
        margin: 10px 0px;;
    }
}

